fix Copy button alignment

--- a/client/assets/styles/scss/popover/popover-demo.scss
+++ b/client/assets/styles/scss/popover/popover-demo.scss
@@ -83,7 +83,6 @@
   .btn-xxs {
     background: $gray;
     color: $white;
-    font-size: 13px;
 
     &:hover {
       background: rgba($gray,.7);
